# Group1-5DOF_social_robot

./: .gitmodules  README.md
social_arm/social_robot_arm_gui/: CMakeLists.txt  package.xml
social_arm/social_robot_arm_gui/arm/: 1111.yaml  49023804.yaml  OTL_1.yaml  arm_pos.yaml  arm_stretch_1.yaml  arm_stretch_2.yaml  butterfly1.yaml  butterfly2.yaml  confidence_1.yaml  default_name.yaml  eye_rub2_1.yaml  eye_rub2_2.yaml  eye_rub2_3.yaml  eye_rub_1.yaml  eye_rub_2.yaml  hand_shake1.yaml  hand_shake2.yaml  hand_stroke_3.yaml  hoho.yaml  hoho_2.yaml  init_pose.yaml  iot1.yaml  iot_blind_1.yaml  iot_blind_2.yaml  korean_greeting_1.yaml  korean_greeting_2.yaml  left_hand_nack.yaml  right_hand_basketball_1.yaml  right_hand_basketball_2.yaml  right_hand_hello_1.yaml  right_hand_high_five_1.yaml  right_hand_high_five_2.yaml  right_hand_ok_1.yaml  right_hand_wink_1.yaml  right_hand_wink_2.yaml  stretch_1.yaml  stretch_2.yaml  t_pos1.yaml  test.yaml  two_hand_circle_1.yaml  (+14 more)
social_arm/social_robot_arm_gui/arm_back/: 1.yaml  attention.yaml  direct_r_1.yaml  direct_r_2.yaml  eye_rub_3.yaml  fighting2_1.yaml  fighting2_2.yaml  fighting_1.yaml  fighting_2.yaml  guide_left.yaml  guide_right.yaml  hand_shake1.yaml  hand_shake2.yaml  hello_1.yaml  hello_1_2.yaml  hello_2.yaml  hello_2_2.yaml  hoho.yaml  hoho2.yaml  manse.yaml  pang_2.yaml  pang_3.yaml  polite_hello_1.yaml  pos1.yaml  question_1.yaml  question_2.yaml  straight.yaml  test.yaml  tpa.yaml  zero_pose.yaml
social_arm/social_robot_arm_gui/config/: init_pose.yaml  zero_pose.yaml
social_arm/social_robot_arm_gui/head_waist/: head_down_10.yaml  head_left.yaml  head_left_10.yaml  head_right.yaml  head_right_10.yaml  head_right_20.yaml  head_up_10.yaml  hw_pos.yaml  hw_right_down.yaml  hw_zero.yaml  left_20.yaml  left_20_wr-3.yaml  left_hand_nack.yaml  polite_hello_1.yaml  waist_back_20.yaml  waist_back_5.yaml  waist_front_20.yaml  waist_front_40.yaml  waist_front_5.yaml  waist_left_10.yaml  waist_left_5.yaml  waist_right_10.yaml  waist_right_5.yaml
social_arm/social_robot_arm_gui/include/social_robot_arm_gui/: main_window.hpp  qnode.hpp
social_arm/social_robot_arm_gui/src/: main.cpp  main_window.cpp  qnode.cpp
social_arm/social_robot_arm_gui/ui/: main_window.ui
social_arm/social_robot_arm_sdk/: CMakeLists.txt  package.xml
social_arm/social_robot_arm_sdk/config/: SOCIAL_ROBOT_ARM.robot  dxl_init.yaml  offset.yaml
social_arm/social_robot_arm_sdk/include/social_robot_arm_sdk/: arm_control_module.h  arm_motion_control_module.h  motion_state.h  social_robot_arm_kinematics.h  social_robot_arm_task_control.h
social_arm/social_robot_arm_sdk/launch/: social_robot_arm_sdk.launch  social_robot_arm_sdk_for_gazebo.launch
social_arm/social_robot_arm_sdk/msg/: PlayMotion.msg  SetJointDeltaPosition.msg  SetJointTorque.msg
social_arm/social_robot_arm_sdk/src/: arm_control_module.cpp  arm_motion_control_module.cpp  motion_state.cpp  social_robot_arm_kinematics.cpp  social_robot_arm_sdk.cpp  social_robot_arm_task_control.cpp
social_arm/social_robot_arm_sdk/srv/: GetJointPose.srv  GetKinematicsPose.srv  SetJointPose.srv  SetKinematicsPose.srv
social_bringup/: CMakeLists.txt  (+1 more)
social_motion/robocare_msgs/: CMakeLists.txt  package.xml
social_motion/robocare_msgs/msg/: NavigationStatus.msg  TTSSetProperties.msg  TTSViseme.msg
social_motion/robocare_msgs/srv/: LeaveStation.srv  SoundPlay.srv  TTSMake.srv
social_motion/robocare_sound/: CMakeLists.txt  package.xml  setup.py
social_motion/robocare_sound/scripts/: sound_node
social_motion/robocare_sound/src/robocare_sound/: sound_node.py  sound_node2.py
social_motion/robocare_tts/: CMakeLists.txt  package.xml
social_motion/robocare_tts/include/TTS/: PowerTTS_M.h  pttsE.h
social_motion/robocare_tts/src/: Exception.cpp  Exception.h  tts_node.cpp  tts_node.h
social_motion/social_avatar/: CMakeLists.txt  README.md  package.xml
social_motion/social_avatar/avatar/social/: config.xml  main.swf  robo_face.swf  robo_face_1.0.swf
social_motion/social_avatar/scripts/: avatar_test  avatar_test2  load_avatar  social_avatar
social_motion/social_avatar/system/config/: config.xml
social_nav/robocare_nav/camera_to_laser/: CMakeLists.txt  package.xml
social_nav/robocare_nav/camera_to_laser/include/: camera_to_laser.h  nui_tracker.h  pcl_tools.h  tool_class.h
social_nav/robocare_nav/camera_to_laser/launch/: camera_to_laser.launch
social_nav/robocare_nav/camera_to_laser/src/: camera_to_laser.cpp  nui_tracker.cpp  pcl_tools.cpp  tool_class.cpp
social_nav/robocare_nav/robocare_frame/: CMakeLists.txt  package.xml
social_nav/robocare_nav/robocare_frame/include/: robocare_frame.h
social_nav/robocare_nav/robocare_frame/launch/: robocare_frame.launch
social_nav/robocare_nav/robocare_frame/src/: robocare_frame.cpp
social_nav/robocare_nav/robocare_navigation/: .cproject  .project  CMakeLists.txt  package.xml
social_nav/robocare_nav/robocare_navigation/include/: robocare_navigation.h  robocare_navigation_test.h  scan_fusion.h
social_nav/robocare_nav/robocare_navigation/launch/: amcl.launch  map_server.launch  move_base.launch  robocare_navigation.launch  scan_fusion.launch  serial.launch  social_gmapping.launch  social_minimal.launch  social_navigation.launch  stage_navigation.launch  stage_simulation.launch
social_nav/robocare_nav/robocare_navigation/maps/: amcl.pgm  amcl.yaml  cost.pgm  cost.yaml  frames.gv  map.pgm
social_nav/robocare_nav/robocare_navigation/param/: amcl.xml  move_base.xml  slam_gmapping.xml
social_nav/robocare_nav/robocare_navigation/src/: robocare_navigation.cpp  robocare_navigation_test.cpp  scan_fusion.cpp
social_nav/social_recharge/: CMakeLists.txt  package.xml
social_nav/social_recharge/include/: social_recharge.h  social_test.h  tool_class.h
social_nav/social_recharge/launch/: social_test.launch
social_nav/social_recharge/src/: social_recharge.cpp  social_test.cpp  tool_class.cpp
social_nav/tool_class/: CMakeLists.txt  README.md  package.xml
social_nav/tool_class/include/: tool_class.h
social_nav/tool_class/src/: tool_class.cpp
(+222 files in other folders)
