<?xml version="1.0"?>
<package>
  <name>social_robot_arm_gui</name>
  <version>0.2.3</version>
  <description>
    The social_robot_arm_gui package
    This package provides simple GUI to control ROBOTIS MANIPULATOR-H.
    This GUI is connected to manipulator_h_base_module.
  </description>
  <license>BSD</license>
  <author email="hjkim@robotis.com">HJKim</author>
  <maintainer email="hjkim@robotis.com">HJKim</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>cmake_modules</run_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <build_depend>social_robot_arm_sdk</build_depend>
  <export></export>
</package>
