<?xml version="1.0"?>
<package format="2">
  <name>robocare_msgs</name>
  <version>0.1.0</version>
  <description>The robocare_msgs package</description>

  <maintainer email="robocare@robocare.co.kr">robocare</maintainer>
  <license>ROBOCARE</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
