<?xml version="1.0"?>
<package format="2">
  <name>robocare_tts</name>
  <version>0.0.0</version>
  <description>The robocare_tts package</description>

  <maintainer email="skkang@robocare.co.kr">skkang</maintainer>

  <license>ROBOCARE</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>robocare_msgs</depend>

  <export>
  </export>
</package>
