<?xml version="1.0"?>
<package format="2">
  <name>tool_class</name>
  <version>0.0.0</version>
  <description>The tool_class package</description>
  
  <maintainer email="kkbaek@todo.todo">kkbaek</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  	<build_depend>tf2</build_depend>
  	<build_depend>tf2_ros</build_depend>
  	<build_depend>tf2_msgs</build_depend>
  	<build_depend>tf2_geometry_msgs</build_depend>
  	<build_depend>tf_conversions</build_depend>
  	<build_depend>sensor_msgs</build_depend>
  	
  	<build_export_depend>tf2</build_export_depend>
  	<build_export_depend>tf2_ros</build_export_depend>
  	<build_export_depend>tf2_msgs</build_export_depend>  	
  	<build_export_depend>tf2_geometry_msgs</build_export_depend>
  	<build_export_depend>tf_conversions</build_export_depend>  	
  	<build_export_depend>sensor_msgs</build_export_depend>
  	
  	<exec_depend>tf2</exec_depend>
  	<exec_depend>tf2_ros</exec_depend>
  	<exec_depend>tf2_msgs</exec_depend>
  	<exec_depend>tf2_geometry_msgs</exec_depend>
  	<exec_depend>tf_conversions</exec_depend>
  	<exec_depend>sensor_msgs</exec_depend>
  <export>
  </export>
</package>
